--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -588,3 +588,14 @@
 .au-c-main-container--mock-login {
   height: 100%;
 }
+
+// Fake modal
+.au-c-modal--flat {
+  z-index: 9997;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  border-radius: 0;
+}
