Newer versions, shim removed, css compilation error
Newer version of some libraries, more structured review should come
later.
A moment-shim was removed that was no longer necessary and caused
problems on other repos.
There was also a CSS compilation error, that is temporarily resolved by
changing the value to 1em.

--- a/app/styles/project/_p-annotations.scss
+++ b/app/styles/project/_p-annotations.scss
@@ -14,7 +14,8 @@
   }
 
   [typeof="besluit:Agendapunt"] {
-    margin-bottom: $say-unit-small;
+    /*margin-bottom: $say-unit-small;*/
+    margin-bottom: 1em;
   }
 
   // Hide superfluous annotated fields
