Fixed deprecations on attributes
Fixed "modalTitle" -> "title", and other related type of deprecations,
mainly on AppUniversum components.

--- a/app/components/agenda-manager/edit.hbs
+++ b/app/components/agenda-manager/edit.hbs
@@ -2,7 +2,7 @@
         @model={{@itemToEdit}}
         @onSubmit={{perform this.submitTask}}
         as |Form|>
-  <AuModal @modalTitle={{t "manageAgendaZittingModal.modalTitle"}}
+  <AuModal @title={{t "manageAgendaZittingModal.modalTitle"}}
            @modalOpen={{@visible}}
            @size="default"
            @closeModal={{this.cancel}}
