--- a/app/components/manage-intermissions/edit.hbs
+++ b/app/components/manage-intermissions/edit.hbs
@@ -1,7 +1,7 @@
 
 <div {{did-update this.updatedIntermission @intermissionToEdit}}>
 <AuModal
-  @modalTitle={{t "manageIntermissions.modalTitle"}}
+  @title={{t "manageIntermissions.modalTitle"}}
   @modalOpen={{@visible}}
   @size="default"
   @closeModal={{this.cancel}}
