--- a/app/components/participation-list/modal.hbs
+++ b/app/components/participation-list/modal.hbs
@@ -1,5 +1,5 @@
 <AuModal
-        @modalTitle="Beheer aanwezigen"
+        @title="Beheer aanwezigen"
         @modalOpen={{@show}}
         @closeModal={{this.onCancel}}
         as |Modal|>
