--- a/app/components/signatures/publication-confirmation.hbs
+++ b/app/components/signatures/publication-confirmation.hbs
@@ -1,5 +1,5 @@
 <AuModal
-  @modalTitle={{concat (t "publicationConfirmation.modalTitle") @name}}
+  @title={{concat (t "publicationConfirmation.modalTitle") @name}}
   @modalOpen={{true}}
   @size="fullscreen"
   @closeModal={{@cancel}}
