--- a/app/components/treatment/voting/edit.hbs
+++ b/app/components/treatment/voting/edit.hbs
@@ -1,5 +1,5 @@
 <AuModal
-  @modalTitle="Bewerk stemming"
+  @title="Bewerk stemming"
   @modalOpen={{true}}
   @size="fullscreen"
   @closeModal={{this.cancel}} as |Modal| >
