--- a/app/components/zitting/manage-zittingsdata.hbs
+++ b/app/components/zitting/manage-zittingsdata.hbs
@@ -23,7 +23,7 @@
 
 {{#if this.showModal}}
   <AuModal
-    @modalTitle={{t "manageZittingsData.modalTitle"}}
+    @title={{t "manageZittingsData.modalTitle"}}
     @modalOpen={{this.showModal}}
     @closeModal={{this.cancel}} as |Modal| >
     <Modal.Body>
