--- a/app/templates/meetings/edit/outro.hbs
+++ b/app/templates/meetings/edit/outro.hbs
@@ -1,6 +1,6 @@
 <AuModal @modalOpen={{true}}
          @size="fullscreen"
-         @modalTitle={{t "meetingForm.sixthSectionTitle"}}
+         @title={{t "meetingForm.sixthSectionTitle"}}
          @closeModal={{this.closeModal}}
          class="au-c-modal--editor"
          as |Modal|>
