--- a/app/templates/meetings/edit/treatment.hbs
+++ b/app/templates/meetings/edit/treatment.hbs
@@ -1,7 +1,7 @@
 <AuModal @modalOpen={{true}}
          @size="fullscreen"
          @closeModal={{this.closeModal}}
-         @modalTitle={{this.document.title}}
+         @title={{this.document.title}}
          class="au-c-modal--editor"
          as |Modal|
 >
