--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -12,7 +12,7 @@
 
 {{#if this.hasDocumentValidationErrors}}
   <AuModal
-    @modalTitle="Geef uw document een naam"
+    @title="Geef uw document een naam"
     @modalOpen={{true}}
     @closeModal={{this.closeValidationModal}} as |Modal| >
     <Modal.Body>
@@ -26,7 +26,7 @@
 
 {{#if this.displayDeleteModal}}
   <AuModal
-    @modalTitle="Wilt u dit document naar de prullenmand verplaatsen"
+    @title="Wilt u dit document naar de prullenmand verplaatsen"
     @modalOpen={{this.displayDeleteModal}}
     @closeModal={{fn (mut this.displayDeleteModal) false}} as |Modal| >
     <Modal.Body>
