--- a/app/templates/inbox/meetings/new.hbs
+++ b/app/templates/inbox/meetings/new.hbs
@@ -1,7 +1,7 @@
 {{page-title (t "inbox.meetings.new.title")}}
 
 <AuModal
-  @modalTitle={{t "inbox.meetings.new.title"}}
+  @title={{t "inbox.meetings.new.title"}}
   @modalOpen={{true}}
   @closeModal={{this.cancelMeetingCreation}}
   as |Modal|
