--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -1,12 +1,12 @@
 <div class="au-c-app-chrome">
   <AuToolbar @size="small">
     <AuToolbarGroup>
-      <AuLink @linkRoute="meetings.edit" @model={{@model.id}} @skin="secondary" @icon="arrow-left" @iconAlignment="left">
+      <AuLink @route="meetings.edit" @model={{@model.id}} @skin="secondary" @icon="arrow-left" @iconAlignment="left">
         {{t "publish.backToMeeting"}}
       </AuLink>
       <span class="au-c-app-chrome__entity">{{t "publish.headingPartOne"}} {{moment-format this.model.geplandeStart "DD/MM/YYYY HH:mm"}}</span>
     </AuToolbarGroup>
-    <AuDropdown @dropdownTitle="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @dropdownButtonLabel="Account settings" @alignment="right">
+    <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
     <AcmidmLogout @class="au-c-button au-c-button--tertiary" role="menuitem">
       <AuIcon @icon="logout" @alignment="left" />Afmelden
     </AcmidmLogout>
@@ -20,25 +20,25 @@
         <nav>
           <ul class="au-c-list-navigation">
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="meetings.publish.agenda" @model={{@model.id}}>
+              <AuNavigationLink @route="meetings.publish.agenda" @model={{@model.id}}>
                 <AuIcon @icon="calendar" @alignment="left" />
                 Agenda
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="meetings.publish.besluitenlijst" @model={{@model.id}}>
+              <AuNavigationLink @route="meetings.publish.besluitenlijst" @model={{@model.id}}>
                 <AuIcon @icon="unordered-list" @alignment="left" />
                 Besluitenlijst
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="meetings.publish.uittreksels" @model={{@model.id}}>
+              <AuNavigationLink @route="meetings.publish.uittreksels" @model={{@model.id}}>
                 <AuIcon @icon="documents" @alignment="left" />
                 Uittreksels
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
-              <AuNavigationLink @linkRoute="meetings.publish.notulen" @model={{@model.id}}>
+              <AuNavigationLink @route="meetings.publish.notulen" @model={{@model.id}}>
                 <AuIcon @icon="document" @alignment="left" />
                 Notulen
               </AuNavigationLink>
