--- a/app/templates/meetings/publish/uittreksels/show.hbs
+++ b/app/templates/meetings/publish/uittreksels/show.hbs
@@ -9,7 +9,7 @@
   <AuButton {{on "click" (perform this.loadExtract)}}>{{t "publish.retry"}}</AuButton>
 {{else if this.extract}}
 <div class="au-u-margin-bottom-small">
-  <AuLink @linkRoute="meetings.publish.uittreksels" @skin="secondary" @icon="arrow-left" @iconAlignment="left">{{t "publish.excerptsOverview"}}</AuLink>
+  <AuLink @route="meetings.publish.uittreksels" @skin="secondary" @icon="arrow-left" @iconAlignment="left">{{t "publish.excerptsOverview"}}</AuLink>
 </div>
 <Signatures::TimelineStep
   @name={{this.agendapoint.titel}}
