--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,11 +24,12 @@
 @import "appuniversum/s-colors.scss";
 @import "appuniversum/s-global";
 @import "appuniversum/s-utilities";
+@import "appuniversum/s-root";
 
 
 // PROJECT SPECIFIC VARIABLES
 @import "project/s-global";
-@import "project/s-say-theme";
+//@import "project/s-say-theme";
 
 // MIXINS
 @import "appuniversum/t-font-size";
@@ -122,7 +123,7 @@
 
 
 // PLUGINS
-@import "ember-rdfa-editor";
+@import "ember-rdfa-editor/custom-components";
 @import "ember-appuniversum/p-ember-power-select";
 @import "ember-appuniversum/p-duet-datepicker";
 @import "project/p-annotations";
