--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -7,9 +7,19 @@
       <span class="au-c-app-chrome__entity">{{t "publish.headingPartOne"}} {{moment-format this.model.geplandeStart "DD/MM/YYYY HH:mm"}}</span>
     </AuToolbarGroup>
     <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
-    <AcmidmLogout @class="au-c-button au-c-button--tertiary" role="menuitem">
+    {{#if this.acmSwitchEnabled}}
+      <Acmidm::Switch as |acmidm|>
+        <AuButton @loading={{acmidm.isSwitching}} class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" acmidm.switch}}>
+          <AuIcon @icon="switch" @alignment="left" />Wissel van bestuurseenheid
+        </AuButton>
+      </Acmidm::Switch>
+    {{/if}}
+    {{!--<AcmidmLogout @class="au-c-button au-c-button--tertiary" role="menuitem">
       <AuIcon @icon="logout" @alignment="left" />Afmelden
-    </AcmidmLogout>
+    </AcmidmLogout>--}}
+    <button type="button" class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" this.logout}}>
+      <AuIcon @icon="logout" @alignment="left" />Afmelden
+    </button>
   </AuDropdown>
   </AuToolbar>
 </div>
