Reverted old change and corrected old value
Due to changing dependencies, the old CSS variable disappeared. This has
now been replaced by the same thing from AppUniversum.

--- a/app/styles/project/_p-annotations.scss
+++ b/app/styles/project/_p-annotations.scss
@@ -14,8 +14,7 @@
   }
 
   [typeof="besluit:Agendapunt"] {
-    /*margin-bottom: $say-unit-small;*/
-    margin-bottom: 1em;
+    margin-bottom: $au-unit-small;
   }
 
   // Hide superfluous annotated fields
