css fixes for ember upgrade

--- a/app/components/acmidm-login-compact.hbs
+++ b/app/components/acmidm-login-compact.hbs
@@ -6,6 +6,6 @@
       <AuLoader />
     {{/if}}
     {{#if acmidm.errorMessage}}
-      <AuAlert @alertsize="small" @alertIcon="cross" @alertTitle={{this.errorMessage}} @alertskin="error" />
+      <AuAlert @alertSize="small" @alertIcon="cross" @alertTitle={{this.errorMessage}} @alertSkin="error" />
     {{/if}}
 </Acmidm::Login>
