--- a/app/templates/meetings/publish/uittreksels/show.hbs
+++ b/app/templates/meetings/publish/uittreksels/show.hbs
@@ -3,7 +3,7 @@
   {{#if this.loadExtract.isRunning}}
   <AuLoader />
 {{else if this.error}}
-  <AuAlert @alertIcon="cross" @alertTitle={{t "publish.excerptErrorMessage"}} @alertskin="error" @alertsize="small">
+  <AuAlert @alertIcon="cross" @alertTitle={{t "publish.excerptErrorMessage"}} @alertSkin="error" @alertSize="small">
     <code>{{this.error}}</code>
   </AuAlert>
   <AuButton {{on "click" (perform this.loadExtract)}}>{{t "publish.retry"}}</AuButton>
