--- a/app/templates/mock-login.hbs
+++ b/app/templates/mock-login.hbs
@@ -1,43 +1,41 @@
-<div class="au-c-main-container" itemprop="mainContentOfPage">
-  <div class="au-c-main-container__content au-c-main-container__content--scroll">
-    <main id="content">
-      <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelinkt notuleren">
-        <img
-          sizes="50vw"
-          src="/assets/images/loket-header-1600.jpg"
-          srcset="/assets/images/loket-header-320.jpg 320w, /assets/images/loket-header-1024.jpg 1024w, /assets/images/loket-header-1600.jpg 1600w"
-          alt=""
-          role="presentation"
-        >
-      </AuContentHeader>
+<AuBodyContainer @scroll={{true}} itemprop="mainContentOfPage">
+  <main id="content">
+    <AuContentHeader @titlePartOne="Vlaanderen" @titlePartTwo="is gelinkt notuleren">
+      <img
+        sizes="50vw"
+        src="/assets/images/loket-header-1600.jpg"
+        srcset="/assets/images/loket-header-320.jpg 320w, /assets/images/loket-header-1024.jpg 1024w, /assets/images/loket-header-1600.jpg 1600w"
+        alt=""
+        role="presentation"
+      >
+    </AuContentHeader>
 
-      <div class="au-o-region-large">
-        <div class="au-o-layout">
-          <AuHeading @skin="4">Kies een bestuurseenheid om mee in te loggen.</AuHeading>
-          <p class="au-u-margin-top-small au-u-margin-bottom">
-            {{#let (unique-id) as |id|}}
-              <AuLabel for={{id}}>Bestuurseenheid zoeken</AuLabel>
-              <input class="au-c-input au-c-input--block js-js-input-pattern-bound" id={{id}} placeholder="Aalst, Berchem, &hellip;" value={{this.gemeente}} autofocus oninput={{perform this.updateSearch value='target.value'}}>
-            {{/let}}
-          </p>
+    <div class="au-o-region-large">
+      <div class="au-o-layout">
+        <AuHeading @skin="4">Kies een bestuurseenheid om mee in te loggen.</AuHeading>
+        <p class="au-u-margin-top-small au-u-margin-bottom">
+          {{#let (unique-id) as |id|}}
+            <AuLabel for={{id}}>Bestuurseenheid zoeken</AuLabel>
+            <input class="au-c-input au-c-input--block js-js-input-pattern-bound" id={{id}} placeholder="Aalst, Berchem, &hellip;" value={{this.gemeente}} autofocus oninput={{perform this.updateSearch value='target.value'}}>
+          {{/let}}
+        </p>
 
-          <MockLogin as |login|>
-            {{#if this.queryStore.isRunning}}
-              <AuLoader @padding="small" />
-            {{else}}
-              {{#if this.login.errorMessage}}
-                <AuAlert @alertIcon="alert-triangle" @alertTitle={{this.login.errorMessage}} @alertskin="warning" />
-              {{/if}}
-              {{#each this.model as |account|}}
-                <AuButton class="au-c-card au-u-margin-bottom-small" @skin="link-secondary" @size="large" type="button" {{on "click" (fn login.login account.id account.gebruiker.group.id)}}>
-                  {{account.gebruiker.voornaam}} {{account.gebruiker.achternaam}}
-                </AuButton>
-              {{/each}}
-              <NumberPagination @page={{this.page}} @size={{this.size}} @nbOfItems={{this.model.length}} @total={{this.model.meta.count}} @links={{this.model.meta.pagination}} />
+        <MockLogin as |login|>
+          {{#if this.queryStore.isRunning}}
+            <AuLoader @padding="small" />
+          {{else}}
+            {{#if this.login.errorMessage}}
+              <AuAlert @alertIcon="alert-triangle" @alertTitle={{this.login.errorMessage}} @alertSkin="warning" />
             {{/if}}
-          </MockLogin>
-        </div>
+            {{#each this.model as |account|}}
+              <AuButton class="au-u-flex au-u-flex--row au-u-flex--start au-c-card au-u-margin-bottom-small" @skin="secondary" @width="block"  @size="large" type="button" {{on "click" (fn login.login account.id account.gebruiker.group.id)}}>
+                {{account.gebruiker.voornaam}} {{account.gebruiker.achternaam}}
+              </AuButton>
+            {{/each}}
+            <NumberPagination @page={{this.page}} @size={{this.size}} @nbOfItems={{this.model.length}} @total={{this.model.meta.count}} @links={{this.model.meta.pagination}} />
+          {{/if}}
+        </MockLogin>
       </div>
-    </main>
-  </div>
-</div>
+    </div>
+  </main>
+</AuBodyContainer>
