--- a/app/templates/switch-login.hbs
+++ b/app/templates/switch-login.hbs
@@ -13,7 +13,7 @@
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
             <AcmidmLogin />
             {{#if this.model}}
-              <AuAlert @alertIcon="alert-triangle" @alertTitle={{this.model}}  @alertskin="error" class="au-u-text-left" />
+              <AuAlert @alertIcon="alert-triangle" @alertTitle={{this.model}}  @alertSkin="error" class="au-u-text-left" />
             {{/if}}
           </div>
         </div>
