--- a/app/components/document-attachments.hbs
+++ b/app/components/document-attachments.hbs
@@ -56,7 +56,7 @@
 
 {{#unless @decisions.length}}
 <AuToolbar @border="top" @nowrap="true" @size="small">
-  <AuAlert @alertIcon="alert-triangle" @alertTitle={{t "attachments.noDecisionsFound"}} @alertskin="warning" class="au-u-margin-bottom-none au-u-1-1">
+  <AuAlert @alertIcon="alert-triangle" @alertTitle={{t "attachments.noDecisionsFound"}} @alertSkin="warning" class="au-u-margin-bottom-none au-u-1-1">
     <p>{{t "attachments.decisionRequired"}}</p>
   </AuAlert>
 </AuToolbar>
