--- a/app/components/signatures/published-resource.hbs
+++ b/app/components/signatures/published-resource.hbs
@@ -7,7 +7,7 @@
   <p class="u-spacer--bottom--small text-fade smaller">{{t "publishedResource.notificationText"}} <a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" rel="noopener noreferrer">Loket voor Lokale Besturen</a>.</p>
 {{else if this.submissionFailed}}
   <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny au-u-margin-top">{{t "publishedResource.reportLabel"}}</AuHeading>
-  <AuAlert @alertIcon="cross" @alertTitle="{{t "publishedResource.reportFailedText"}}" @alertskin="error" @alertsize="small">
+  <AuAlert @alertIcon="cross" @alertTitle="{{t "publishedResource.reportFailedText"}}" @alertSkin="error" @alertSize="small">
     <p>{{t "publishedResource.downloadText"}}<a href="https://loket.lokaalbestuur.vlaanderen.be/" target="_blank" class="au-c-link" rel="noopener noreferrer">Loket voor Lokale Besturen</a>.</p>
   </AuAlert>
 {{/if}}
