--- a/app/components/signatures/signature-confirmation.hbs
+++ b/app/components/signatures/signature-confirmation.hbs
@@ -10,7 +10,7 @@
         <div class="au-c-rdfa-publication-aside">
           <div class="au-o-box">
             <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "signatureConfirmation.signLabel"}}</AuHeading>
-            <AuAlert @alertIcon="info-circle" @alertTitle={{t "signatureConfirmation.signWarningTitle"}}  @alertskin="info" @alertsize="small">
+            <AuAlert @alertIcon="info-circle" @alertTitle={{t "signatureConfirmation.signWarningTitle"}}  @alertSkin="info" @alertSize="small">
               <p>{{t "signatureConfirmation.signWarningText"}}</p>
             </AuAlert>
             <AuHeading @level="2" @skin="6" class="au-u-margin-bottom-small">{{t "signatureConfirmation.metadataLabel"}}</AuHeading>
