--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -55,7 +55,9 @@
 
 
 // COMPONENTS
+@import "ember-appuniversum/c-accordion";
 @import "ember-appuniversum/c-alert";
+@import "ember-appuniversum/c-app";
 @import "ember-appuniversum/c-badge";
 @import "ember-appuniversum/c-body-container";
 @import "ember-appuniversum/c-brand";
@@ -67,6 +69,7 @@
 @import "ember-appuniversum/c-control";
 @import "ember-appuniversum/c-data-table";
 @import "ember-appuniversum/c-dropdown";
+@import "ember-appuniversum/c-file-upload";
 @import "ember-appuniversum/c-form";
 @import "ember-appuniversum/c-heading";
 @import "ember-appuniversum/c-help-text";
@@ -91,8 +94,6 @@
 @import "ember-appuniversum/c-timepicker";
 @import "ember-appuniversum/c-toolbar";
 @import "ember-appuniversum/c-toggle-switch";
-@import "ember-appuniversum/c-file-upload";
-
 
 // PROJECT COMPONENTS
 @import 'project/c-app-chrome';
@@ -107,11 +108,14 @@
 
 // UTILITIES
 @import "appuniversum/u-align-text";
+@import "appuniversum/u-background";
 @import "appuniversum/u-break-word";
+@import "appuniversum/u-font-weights";
+@import "appuniversum/u-font-family";
+@import "appuniversum/u-flex";
 @import "appuniversum/u-headings";
 @import "appuniversum/u-hide";
-@import "appuniversum/u-font-family";
-@import "appuniversum/u-font-weights";
+@import "appuniversum/u-max-widths";
 @import "appuniversum/u-paragraphs";
 @import "appuniversum/u-print";
 @import "appuniversum/u-responsive-spacings";
