--- a/app/styles/project/_c-editor-preview.scss
+++ b/app/styles/project/_c-editor-preview.scss
@@ -77,14 +77,6 @@
       }
     }
   }
-
-  .checkbox--switch__wrapper {
-    display: block;
-    border-bottom: 1px solid $au-gray-300;
-    padding: 0;
-    padding-bottom: $au-unit-small;
-    margin-bottom: $au-unit-small;
-  }
 }
 
 .au-c-editor-preview-treatment--private .behandeling {
@@ -243,7 +235,7 @@
 
 .is-required[content=""] {
   display: inline-block;
-  padding: $au-unit-tiny/2 $au-unit-tiny;
+  padding: $au-unit-tiny * .5 $au-unit-tiny;
   border-radius: $au-radius;
   background-color: $au-red-600;
 
