--- a/app/styles/project/_s-say-theme.scss
+++ b/app/styles/project/_s-say-theme.scss
@@ -12,7 +12,7 @@ $say-primary-600              : $au-blue-600;
 $say-primary-700              : $au-blue-700;
 $say-primary-900              : $au-blue-900;
 
-$say-outline-color            : $au-yellow-400;
+$say-outline-color            : $au-blue-400;
 
 // Font settings
 // ---
@@ -44,13 +44,13 @@ $say-paper-background            : $au-white;
 $say-paper-box-shadow            : 0 1px 3px rgba($au-gray-900, .1), 0 4px 20px rgba($au-gray-900, .035), 0 1px 1px rgba($au-gray-900, .025);
 
 // Typography
-$say-h1-font-family              : $au-font-secondary;
+$say-h1-font-family              : $au-font;
 $say-h1-font-weight              : $au-light;
 $say-h1-font-size                : $au-h1;
-$say-h2-font-family              : $au-font-secondary;
+$say-h2-font-family              : $au-font;
 $say-h2-font-weight              : $au-regular;
 $say-h2-font-size                : $au-h2;
-$say-h3-font-family              : $au-font-secondary;
+$say-h3-font-family              : $au-font;
 $say-h3-font-weight              : $au-regular;
 $say-h3-font-size                : $au-h3;
 $say-h4-font-family              : $au-font;
@@ -70,8 +70,8 @@ $say-smaller-font-size           : 1.4rem;
 $say-smallest-font-size          : 1.3rem;
 $say-typography-margin           : $au-unit-small;
 $say-editor-private-color        : $au-yellow-600;
-$say-editor-highlight-color      : $au-yellow-200;
-$say-editor-highlight-hover-color: $au-yellow-100;
+$say-editor-highlight-color      : var(--au-blue-200);
+$say-editor-highlight-hover-color: var(--au-blue-300);
 
 
 // TOOLBAR
