--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -12,7 +12,7 @@
       <div class="say-container__main">
         {{#unless this.readOnly}}
           <div class="au-o-box au-o-box--small au-c-theme-gray-100">
-            <AuAlert @alertIcon="info-circle" @alertTitle="Niet editeerbaar"  @alertskin="info" @alertsize="small" class="au-u-margin-bottom-none">
+            <AuAlert @alertIcon="info-circle" @alertTitle="Niet editeerbaar"  @alertSkin="info" @alertSize="small" class="au-u-margin-bottom-none">
               <p>Dit artikel is reeds gepubliceerd. Gepubliceerde agendapunten zijn niet editeerbaar.</p>
             </AuAlert>
           </div>
