--- a/app/templates/inbox/agendapoints/new.hbs
+++ b/app/templates/inbox/agendapoints/new.hbs
@@ -10,7 +10,7 @@
       <creator.form />
 
       {{#if creator.errorSaving}}
-        <AuAlert @alertIcon="cross" @alertTitle={{t "inbox.agendapoints.new.errorSaving"}} @alertskin="error" @closable={{true}}>
+        <AuAlert @alertIcon="cross" @alertTitle={{t "inbox.agendapoints.new.errorSaving"}} @alertSkin="error" @closable={{true}}>
           {{creator.errorSaving}}
         </AuAlert>
       {{/if}}
