--- a/app/templates/inbox/imported.hbs
+++ b/app/templates/inbox/imported.hbs
@@ -8,7 +8,7 @@
             Geïmporteerde HTML bestanden
           </AuHeading>
         </AuToolbarGroup>
-        <AuToolbarGroup class="au-c-toolbar__group--search">
+        <AuToolbarGroup>
           <TextSearch @filter={{title}} @placeholder="Zoek titel bestand" />
           <LinkTo @route="imported-documents.new" class="button button--alt">Importeer HTML bestand</LinkTo>
           <LinkTo @route="imported-documents.new" class="button">Nieuw ontwerpbesluit</LinkTo>
